--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             // "args": "${command:pickArgs}"
             "args": [
-                "algo=random_search"
+                "algo=bananas"
             ]
         },
         {
