--- a/.gitignore
+++ b/.gitignore
@@ -253,6 +253,8 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,macos,windows
 
+!/data/
+
 /debug/
 /data/*
 /test/
